<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded"
    android:orientation="vertical"
    android:padding="20dp"
    android:theme="@style/Theme.FormsPageTheme.NumberPickerStyle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/form_card_expiry_dialog_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/month_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp" />

        <NumberPicker
            android:id="@+id/year_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="?colorAccent"
            app:cornerRadius="22dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:background="?colorControlNormal" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/okBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="?colorAccent"
            app:cornerRadius="22dp" />
    </LinearLayout>
</LinearLayout>